@@ -1,7 +1,9 @@
 package cloud.timo.TimoCloud.base.managers;
 
 import cloud.timo.TimoCloud.base.TimoCloudBase;
+import cloud.timo.TimoCloud.base.objects.BaseProxyObject;
 import cloud.timo.TimoCloud.base.objects.BaseServerObject;
+import cloud.timo.TimoCloud.utils.HashUtil;
 import cloud.timo.TimoCloud.utils.ServerToGroupUtil;
 import cloud.timo.TimoCloud.utils.TimeUtil;
 import org.apache.commons.io.FileDeleteStrategy;
@@ -12,6 +14,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.net.ServerSocket;
 import java.nio.file.Files;
 import java.util.*;
 import java.util.concurrent.Executors;
@@ -22,19 +25,23 @@ public class BaseServerManager {
 
     private static final long STATIC_CREATE_TIME = 1482773874000L;
 
-    private LinkedList<BaseServerObject> queue;
+    private LinkedList<BaseServerObject> serverQueue;
+    private LinkedList<BaseProxyObject> proxyQueue;
+
     private final ScheduledExecutorService scheduler;
-    private boolean startingServer;
+
+    private boolean startingServer = false;
+    private boolean startingProxy = false;
 
     public BaseServerManager(long millis) {
-        queue = new LinkedList<>();
+        serverQueue = new LinkedList<>();
+        proxyQueue = new LinkedList<>();
         scheduler = Executors.newScheduledThreadPool(1);
         scheduler.scheduleAtFixedRate(this::startNext, millis, millis, TimeUnit.MILLISECONDS);
-        startingServer = false;
     }
 
     public void updateResources() {
-        boolean ready = queue.isEmpty() && ! startingServer && TimoCloudBase.getInstance().getResourceManager().getCpuUsage() <= (Double) TimoCloudBase.getInstance().getFileManager().getConfig().get("cpu-max-load");
+        boolean ready = serverQueue.isEmpty() && !startingServer && !startingProxy && TimoCloudBase.getInstance().getResourceManager().getCpuUsage() <= (Double) TimoCloudBase.getInstance().getFileManager().getConfig().get("cpu-max-load");
         int freeRam = Math.max(0, TimoCloudBase.getInstance().getResourceManager().getFreeMemory() - (Integer) TimoCloudBase.getInstance().getFileManager().getConfig().get("ram-keep-free"));
         Map<String, Object> resourcesMap = new HashMap<>();
         resourcesMap.put("ready", ready);
@@ -43,22 +50,42 @@ public class BaseServerManager {
         TimoCloudBase.getInstance().getSocketMessageManager().sendMessage("RESOURCES", new JSONObject(resourcesMap));
     }
 
-    public void addToQueue(BaseServerObject server) {
-        queue.add(server);
+    public void addToServerQueue(BaseServerObject server) {
+        serverQueue.add(server);
+    }
+
+    public void addToProxyQueue(BaseProxyObject proxy) {
+        proxyQueue.add(proxy);
     }
 
     public void startNext() {
-        if (queue.isEmpty()) return;
-        BaseServerObject server = queue.pop();
+        startNextServer();
+        startNextProxy();
+        updateResources();
+    }
+
+    public void startNextServer() {
+        if (serverQueue.isEmpty()) return;
+        BaseServerObject server = serverQueue.pop();
         if (server == null) {
-            startNext();
+            startNextServer();
             return;
         }
         startingServer = true;
-        updateResources();
         startServer(server);
         startingServer = false;
-        updateResources();
+    }
+
+    public void startNextProxy() {
+        if (proxyQueue.isEmpty()) return;
+        BaseProxyObject proxy = proxyQueue.pop();
+        if (proxy == null) {
+            startNextProxy();
+            return;
+        }
+        startingProxy = true;
+        startProxy(proxy);
+        startingProxy = false;
     }
 
     private void copyDirectory(File from, File to) throws IOException {
@@ -72,7 +99,7 @@ public class BaseServerManager {
         for (File file : from.listFiles()) {
             File toFile = new File(to, file.getName());
             if (file.isDirectory()) {
-                copyDirectoryCarefully(file, toFile, value, layer+1);
+                copyDirectoryCarefully(file, toFile, value, layer + 1);
             } else {
                 if (toFile.exists() && toFile.lastModified() != value) continue;
 
@@ -90,38 +117,51 @@ public class BaseServerManager {
         TimoCloudBase.info("Starting server " + server.getName() + "...");
         double millisBefore = System.currentTimeMillis();
         try {
-            File templateDirectory = new File((server.isStatic() ? TimoCloudBase.getInstance().getFileManager().getStaticDirectory() : TimoCloudBase.getInstance().getFileManager().getTemplatesDirectory()), server.getGroup());
+            File templateDirectory = new File((server.isStatic() ? TimoCloudBase.getInstance().getFileManager().getServerStaticDirectory() : TimoCloudBase.getInstance().getFileManager().getServerTemplatesDirectory()), server.getGroup());
             if (!templateDirectory.exists()) {
                 TimoCloudBase.severe("Could not start server " + server.getName() + ": No template called " + server.getGroup() + " found. Please make sure the directory " + templateDirectory.getAbsolutePath() + " exists. (Put your minecraft server in there)");
                 return;
             }
 
-            File temporaryDirectory = server.isStatic() ? templateDirectory : new File(TimoCloudBase.getInstance().getFileManager().getTemporaryDirectory(), server.getName());
+            List<String> templateDifferences = HashUtil.getDifferentFiles("", server.getTemplateHash(), HashUtil.getHashes(templateDirectory));
+            List<String> mapDifferences = server.getMapHash() != null ? HashUtil.getDifferentFiles("", server.getMapHash(), HashUtil.getHashes(new File(TimoCloudBase.getInstance().getFileManager().getServerTemplatesDirectory(), server.getGroup() + "_" + server.getMap()))) : new ArrayList<>();
+            List<String> gloalDifferences = HashUtil.getDifferentFiles("", server.getGlobalHash(), HashUtil.getHashes(TimoCloudBase.getInstance().getFileManager().getServerGlobalDirectory()));
+
+            if (templateDifferences.size() > 0 || mapDifferences.size() > 0 || gloalDifferences.size() > 0) {
+                Map<String, Object> differences = new HashMap<>();
+                if (templateDifferences.size() > 0) differences.put("templateDifferences", templateDifferences);
+                if (mapDifferences.size() > 0) differences.put("mapDifferences", mapDifferences);
+                if (gloalDifferences.size() > 0) differences.put("globalDifferences", gloalDifferences);
+                TimoCloudBase.info("New server template updates found! Stopping and downloading updates...");
+                JSONObject differencesJson = new JSONObject(differences);
+                Map<String, Object> message = new HashMap<>();
+                message.put("type", "SERVER_TEMPLATE_REQUEST");
+                message.put("server", server.getName());
+                if (templateDifferences.size() > 0) message.put("template", templateDirectory.getName());
+                if (mapDifferences.size() > 0) message.put("map", server.getMap());
+                message.put("differences", differencesJson);
+                TimoCloudBase.getInstance().getSocketMessageManager().sendMessage(new JSONObject(message));
+                return;
+            }
+
+            File temporaryDirectory = server.isStatic() ? templateDirectory : new File(TimoCloudBase.getInstance().getFileManager().getServerTemporaryDirectory(), server.getName());
             if (!server.isStatic()) {
                 if (temporaryDirectory.exists()) deleteDirectory(temporaryDirectory);
-                copyDirectory(TimoCloudBase.getInstance().getFileManager().getGlobalDirectory(), temporaryDirectory);
+                copyDirectory(TimoCloudBase.getInstance().getFileManager().getServerGlobalDirectory(), temporaryDirectory);
             }
 
             if (server.isStatic()) {
-                copyDirectoryCarefully(TimoCloudBase.getInstance().getFileManager().getGlobalDirectory(), temporaryDirectory,  STATIC_CREATE_TIME, 1);
+                copyDirectoryCarefully(TimoCloudBase.getInstance().getFileManager().getServerGlobalDirectory(), temporaryDirectory, STATIC_CREATE_TIME, 1);
             } else {
                 copyDirectory(templateDirectory, temporaryDirectory);
             }
 
             boolean randomMap = false;
-            String mapName = "default";
-            if (!server.isStatic()) {
-                File randomMapDirectory = getRandomServer(server.getGroup());
-                if (randomMapDirectory != null && randomMapDirectory.exists()) {
-                    randomMap = true;
-                    mapName = "";
-                    String[] splitted = randomMapDirectory.getName().split("_");
-                    for (int i = 1; i < splitted.length; i++) {
-                        mapName += splitted[i];
-                        if (i < splitted.length - 1) mapName += "_";
-                    }
-                    copyDirectory(randomMapDirectory, temporaryDirectory);
-                }
+            String mapName = server.getMap() == null ? "default" : server.getMap();
+            if (!server.isStatic() && server.getMap() != null) {
+                randomMap = true;
+                File mapDirectory = new File(TimoCloudBase.getInstance().getFileManager().getServerTemplatesDirectory(), server.getGroup() + "_" + server.getMap());
+                copyDirectory(mapDirectory, temporaryDirectory);
             }
 
             File spigotJar = new File(temporaryDirectory, "spigot.jar");
@@ -133,18 +173,19 @@ public class BaseServerManager {
 
             File plugins = new File(temporaryDirectory, "/plugins/");
             plugins.mkdirs();
-            File plugin = new File(plugins, "TimoCloudBungee.jar");
-            if (plugin.exists()) {
-                plugin.delete();
-            }
+            File plugin = new File(plugins, "TimoCloud.jar");
+            if (plugin.exists()) plugin.delete();
             try {
                 Files.copy(new File(TimoCloudBase.class.getProtectionDomain().getCodeSource().getLocation().getPath()).toPath(), plugin.toPath());
             } catch (Exception e) {
                 TimoCloudBase.severe("Error while copying plugin into template:");
                 e.printStackTrace();
-                if (!plugin.exists()) {
-                    return;
-                }
+                if (!plugin.exists()) return;
+            }
+
+            Integer port = getFreePort();
+            if (port == null) {
+                TimoCloudBase.severe("Error while starting server " + server.getName() + ": No free port found. Please report this!");
             }
 
             File serverProperties = new File(temporaryDirectory, "server.properties");
@@ -170,9 +211,8 @@ public class BaseServerManager {
                             " -Dtimocloud-token=" + server.getToken() +
                             " -Dtimocloud-templatedirectory=" + templateDirectory.getAbsolutePath() +
                             " -Dtimocloud-temporarydirectory=" + temporaryDirectory.getAbsolutePath() +
-                            " -jar spigot.jar -o false -h 0.0.0.0 -p " + server.getPort()
+                            " -jar spigot.jar -o false -h 0.0.0.0 -p " + port
             ).directory(temporaryDirectory);
-
             try {
                 pb.start();
                 TimoCloudBase.info("Successfully started screen session " + server.getName() + ".");
@@ -180,9 +220,146 @@ public class BaseServerManager {
                 TimoCloudBase.severe("Error while starting server " + server.getName() + ":");
                 e.printStackTrace();
             }
+
+            Map<String, Object> message = new HashMap<>();
+            message.put("type", "SERVER_STARTED");
+            message.put("server", server.getName());
+            message.put("token", server.getToken());
+            message.put("port", port);
+            TimoCloudBase.getInstance().getSocketMessageManager().sendMessage(new JSONObject(message));
+
         } catch (Exception e) {
             TimoCloudBase.severe("Error while starting server " + server.getName() + ":");
             e.printStackTrace();
+            TimoCloudBase.getInstance().getSocketMessageManager().sendMessage("SERVER_NOT_STARTED", server.getName(), server.getToken());
+        }
+    }
+
+
+    private void startProxy(BaseProxyObject proxy) {
+        TimoCloudBase.info("Starting proxy " + proxy.getName() + "...");
+        double millisBefore = System.currentTimeMillis();
+        try {
+            File templateDirectory = new File((proxy.isStatic() ? TimoCloudBase.getInstance().getFileManager().getProxyStaticDirectory() : TimoCloudBase.getInstance().getFileManager().getProxyTemplatesDirectory()), proxy.getGroup());
+            if (!templateDirectory.exists()) {
+                TimoCloudBase.severe("Could not start proxy " + proxy.getName() + ": No template called " + proxy.getGroup() + " found. Please make sure the directory " + templateDirectory.getAbsolutePath() + " exists. (Put your BungeeCord in there)");
+                return;
+            }
+
+            List<String> templateDifferences = HashUtil.getDifferentFiles("", proxy.getTemplateHash(), HashUtil.getHashes(templateDirectory));
+            List<String> gloalDifferences = HashUtil.getDifferentFiles("", proxy.getGlobalHash(), HashUtil.getHashes(TimoCloudBase.getInstance().getFileManager().getProxyGlobalDirectory()));
+
+            if (templateDifferences.size() > 0 || gloalDifferences.size() > 0) {
+                Map<String, Object> differences = new HashMap<>();
+                if (templateDifferences.size() > 0) differences.put("templateDifferences", templateDifferences);
+                if (gloalDifferences.size() > 0) differences.put("globalDifferences", gloalDifferences);
+                TimoCloudBase.info("New proxy template updates found! Stopping and downloading updates...");
+                JSONObject differencesJson = new JSONObject(differences);
+                Map<String, Object> message = new HashMap<>();
+                message.put("type", "PROXY_TEMPLATE_REQUEST");
+                message.put("proxy", proxy.getName());
+                if (templateDifferences.size() > 0) message.put("template", templateDirectory.getName());
+                message.put("differences", differencesJson);
+                TimoCloudBase.getInstance().getSocketMessageManager().sendMessage(new JSONObject(message));
+                return;
+            }
+
+            File temporaryDirectory = proxy.isStatic() ? templateDirectory : new File(TimoCloudBase.getInstance().getFileManager().getProxyTemplatesDirectory(), proxy.getName());
+            if (!proxy.isStatic()) {
+                if (temporaryDirectory.exists()) deleteDirectory(temporaryDirectory);
+                copyDirectory(TimoCloudBase.getInstance().getFileManager().getProxyGlobalDirectory(), temporaryDirectory);
+            }
+
+            if (proxy.isStatic()) {
+                copyDirectoryCarefully(TimoCloudBase.getInstance().getFileManager().getProxyGlobalDirectory(), temporaryDirectory, STATIC_CREATE_TIME, 1);
+            } else {
+                copyDirectory(templateDirectory, temporaryDirectory);
+            }
+
+            File bungeeJar = new File(temporaryDirectory, "BungeeCord.jar");
+            if (!bungeeJar.exists()) {
+                TimoCloudBase.severe("Could not start proxy " + proxy.getName() + " because BungeeCord.jar does not exist. Please make sure a the file " + bungeeJar.getAbsolutePath() + " exists (case sensitive!)");
+                return;
+            }
+
+
+            File plugins = new File(temporaryDirectory, "/plugins/");
+            plugins.mkdirs();
+            File plugin = new File(plugins, "TimoCloud.jar");
+            if (plugin.exists()) plugin.delete();
+            try {
+                Files.copy(new File(TimoCloudBase.class.getProtectionDomain().getCodeSource().getLocation().getPath()).toPath(), plugin.toPath());
+            } catch (Exception e) {
+                TimoCloudBase.severe("Error while copying plugin into template:");
+                e.printStackTrace();
+                if (!plugin.exists()) return;
+            }
+
+            Integer port = getFreePort();
+            if (port == null) {
+                TimoCloudBase.severe("Error while starting proxy " + proxy.getName() + ": No free port found. Please report this!");
+            }
+
+            File serverProperties = new File(temporaryDirectory, "server.properties");
+            setProperty(serverProperties, "online-mode", "false");
+            setProperty(serverProperties, "server-name", server.getName());
+
+            double millisNow = System.currentTimeMillis();
+            TimoCloudBase.info("Successfully prepared starting server " + server.getName() + " in " + (millisNow - millisBefore) / 1000 + " seconds.");
+
+
+            ProcessBuilder pb = new ProcessBuilder(
+                    "/bin/sh", "-c",
+                    "screen -mdS " + server.getName() +
+                            " java -server " +
+                            " -Xmx" + server.getRam() + "M" +
+                            " -Dfile.encoding=UTF8 -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:+UseCompressedOops -XX:MaxGCPauseMillis=10 -XX:GCPauseIntervalMillis=100 -XX:+UseAdaptiveSizePolicy -XX:ParallelGCThreads=2 -XX:UseSSE=3 " +
+                            " -Dcom.mojang.eula.agree=true" +
+                            " -Dtimocloud-bungeecordhost=" + TimoCloudBase.getInstance().getBungeeSocketIP() + ":" + TimoCloudBase.getInstance().getBungeeSocketPort() +
+                            " -Dtimocloud-randommap=" + randomMap +
+                            " -Dtimocloud-mapname=" + mapName +
+                            " -Dtimocloud-servername=" + server.getName() +
+                            " -Dtimocloud-static=" + server.isStatic() +
+                            " -Dtimocloud-token=" + server.getToken() +
+                            " -Dtimocloud-templatedirectory=" + templateDirectory.getAbsolutePath() +
+                            " -Dtimocloud-temporarydirectory=" + temporaryDirectory.getAbsolutePath() +
+                            " -jar spigot.jar -o false -h 0.0.0.0 -p " + port
+            ).directory(temporaryDirectory);
+            try {
+                pb.start();
+                TimoCloudBase.info("Successfully started screen session " + server.getName() + ".");
+            } catch (Exception e) {
+                TimoCloudBase.severe("Error while starting server " + server.getName() + ":");
+                e.printStackTrace();
+            }
+
+            Map<String, Object> message = new HashMap<>();
+            message.put("type", "PROXY_STARTED");
+            message.put("proxy", proxy.getName());
+            message.put("token", proxy.getToken());
+            message.put("port", port);
+            TimoCloudBase.getInstance().getSocketMessageManager().sendMessage(new JSONObject(message));
+
+        } catch (Exception e) {
+            TimoCloudBase.severe("Error while starting proxy " + proxy.getName() + ":");
+            e.printStackTrace();
+            TimoCloudBase.getInstance().getSocketMessageManager().sendMessage("PROXY_NOT_STARTED", proxy.getName(), proxy.getToken());
+        }
+    }
+
+    private Integer getFreePort() {
+        for (int p = 40000; p<=50000; p++) {
+            if (portIsFree(p)) return p;
+        }
+        return null;
+    }
+
+    private boolean portIsFree(int port) {
+        try {
+            new ServerSocket(port).close();
+            return true;
+        } catch (Exception e) {
+            return false;
         }
     }
 
@@ -205,23 +382,9 @@ public class BaseServerManager {
         }
     }
 
-    private File getRandomServer(String group) {
-        File templates = TimoCloudBase.getInstance().getFileManager().getTemplatesDirectory();
-        List<File> valid = new ArrayList<>();
-        for (File sub : templates.listFiles()) {
-            if (!sub.isDirectory() || !sub.getName().startsWith(group + "_")) {
-                continue;
-            }
-            valid.add(sub);
-        }
-        if (valid.size() < 1) {
-            return null;
-        }
-        return valid.get(new Random().nextInt(valid.size()));
-    }
 
     public void onServerStopped(String name) {
-        File directory = new File(TimoCloudBase.getInstance().getFileManager().getTemporaryDirectory(), name);
+        File directory = new File(TimoCloudBase.getInstance().getFileManager().getServerTemporaryDirectory(), name);
         if ((Boolean) TimoCloudBase.getInstance().getFileManager().getConfig().get("save-logs")) {
             File log = new File(directory, "/logs/latest.log");
             if (log.exists()) {
